--- a/scratch/Dockerfile
+++ b/scratch/Dockerfile
@@ -2,6 +2,9 @@ FROM scratch
 COPY --from=traefik:v2.1.0-alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=traefik:v2.1.0-alpine /usr/share/zoneinfo /usr/share/
 COPY --from=traefik:v2.1.0-alpine /usr/local/bin/traefik /
+	
+## Fix nssswitch not looking at hosts file (See https://github.com/containous/traefik-library-image/pull/75)
+RUN [ ! -e /etc/nsswitch.conf ] && echo "hosts: files dns" > /etc/nsswitch.conf
 
 EXPOSE 80
 VOLUME ["/tmp"]
@@ -14,6 +17,3 @@ LABEL org.opencontainers.image.vendor="Containous" \
 	org.opencontainers.image.description="A modern reverse-proxy" \
 	org.opencontainers.image.version="v2.1.0" \
 	org.opencontainers.image.documentation="https://docs.traefik.io"
-	
-## Fix nssswitch not looking at hosts file (See https://github.com/containous/traefik-library-image/pull/75)
-RUN echo "hosts: files dns" > /etc/nsswitch.conf
